fixing some css footer

--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -343,6 +343,7 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-top: 20px;
 }
 
 @media screen and (min-width: 1280px) {
@@ -386,7 +387,6 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-bottom: 40px;
   width: 100%;
 }
 .footer__container--gamegogsmenu .gamegogsmenu__about.active,
@@ -418,6 +418,7 @@ p {
 }
 .footer__container--gamegogsmenu .gamegogs__title > p {
   font-weight: 400;
+  padding-bottom: 10px;
 }
 .footer__container--gamegogsmenu .gamegogs__title .down {
   rotate: 180deg;
@@ -430,7 +431,7 @@ p {
   border-bottom: 1px solid rgba(251, 243, 161, 0.3882352941);
 }
 .footer__container--gamegogsmenu .gamegogsmenu__li > p {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 @media screen and (min-width: 744px) {
@@ -467,6 +468,9 @@ p {
   .footer__container--gamegogsmenu .gamegogs__title img {
     display: none;
   }
+  .footer__container--gamegogsmenu .gamegogs__title > p {
+    padding-bottom: 0px;
+  }
 }
 @media screen and (min-width: 1280px) {
   .footer__container--gamegogsmenu {
@@ -500,7 +504,7 @@ p {
           flex-direction: row;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin: 40px;
+  padding: 0 0 20px 0;
 }
 .socialnetworks__container .socialnetwork__block .socialnetworkmenu__text {
   display: none;
@@ -566,9 +570,9 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-ordinal-group: 4;
-      -ms-flex-order: 3;
-          order: 3;
+  -webkit-box-ordinal-group: 5;
+      -ms-flex-order: 4;
+          order: 4;
 }
 .rgpd__container .rgpd__block {
   width: 100%;
@@ -592,6 +596,7 @@ p {
 .rgpd__container .rgpd__block .rgpdmenu__rgpd .rgpdmenu__li .rgpdmenu__text > a {
   color: #FBF4A1;
   font-weight: 400;
+  font-size: 12px;
 }
 .rgpd__container .rgpd__block .rgpdmenu__rgpd .rgpdmenu__li .rgpdmenu__text a:hover {
   text-decoration: underline;
@@ -618,13 +623,6 @@ p {
   .rgpd__container .rgpd__block .rgpdmenu__rgpd .rgpdmenu__li {
     margin-bottom: 20px;
   }
-  .rgpd__container .rgpd__block .rgpdmenu__rgpd .rgpdmenu__li .rgpdmenu__text > a {
-    color: #FBF4A1;
-    font-weight: 400;
-  }
-  .rgpd__container .rgpd__block .rgpdmenu__rgpd .rgpdmenu__li .rgpdmenu__text a:hover {
-    text-decoration: underline;
-  }
 }
 .footer__container--brandname {
   display: -webkit-box;
@@ -641,9 +639,9 @@ p {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  -webkit-box-ordinal-group: 5;
-      -ms-flex-order: 4;
-          order: 4;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
 }
 .footer__container--brandname .brandname__copyright p {
   font-size: 12px;
@@ -652,13 +650,12 @@ p {
 
 @media screen and (min-width: 744px) {
   .footer__container--brandname {
-    -webkit-box-ordinal-group: 4;
-        -ms-flex-order: 3;
-            order: 3;
+    padding-top: 30px;
   }
 }
 @media screen and (min-width: 1280px) {
   .footer__container--brandname {
     width: 30%;
+    padding-top: 0px;
   }
 }/*# sourceMappingURL=index.css.map */
