--- a/assets/style/css/footer.css
+++ b/assets/style/css/footer.css
@@ -6,6 +6,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-top: 20px;
 }
 
 @media screen and (min-width: 1280px) {
