--- a/assets/style/css/logo.css
+++ b/assets/style/css/logo.css
@@ -13,9 +13,9 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  -webkit-box-ordinal-group: 5;
-      -ms-flex-order: 4;
-          order: 4;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
 }
 .footer__container--brandname .brandname__copyright p {
   font-size: 12px;
@@ -24,13 +24,12 @@
 
 @media screen and (min-width: 744px) {
   .footer__container--brandname {
-    -webkit-box-ordinal-group: 4;
-        -ms-flex-order: 3;
-            order: 3;
+    padding-top: 30px;
   }
 }
 @media screen and (min-width: 1280px) {
   .footer__container--brandname {
     width: 30%;
+    padding-top: 0px;
   }
 }/*# sourceMappingURL=logo.css.map */
