--- a/assets/style/css/social-networks.css
+++ b/assets/style/css/social-networks.css
@@ -25,7 +25,7 @@
           flex-direction: row;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin: 40px;
+  padding: 0 0 20px 0;
 }
 .socialnetworks__container .socialnetwork__block .socialnetworkmenu__text {
   display: none;
