--- a/components/footer/logo/logo.scss
+++ b/components/footer/logo/logo.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    order: 4;
+    order: 3;
 
   
 
@@ -20,14 +20,15 @@
 
 @media screen and (min-width : 744px) {
     .footer__container--brandname {
-        order:3;
-    
+        padding-top: 30px;
+        
     }
     
 }
 @media screen and (min-width : 1280px) {
     .footer__container--brandname {
         width: 30%;
+        padding-top: 0px;
     }
     }
     
