--- a/components/footer/social-networks/social-networks.scss
+++ b/components/footer/social-networks/social-networks.scss
@@ -13,7 +13,8 @@
             display: flex;
             flex-direction: row;
             justify-content: space-around;
-            margin: 40px;
+            padding: 0 0 20px 0;
+            // margin: 40px;
         }
 
         .socialnetworkmenu__text {
