--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -658,4 +658,66 @@ p {
     width: 30%;
     padding-top: 0px;
   }
+}
+.filter__navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px 45px;
+}
+.filter__navigation .filter__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #FBF4A1;
+  border-radius: 5px;
+}
+.filter__navigation .filter__container .filter__button > img {
+  width: 20px;
+  height: 20px;
+  margin: 4px;
+}
+.filter__navigation .filter__container .filter__button > span {
+  color: #FBF4A1;
+  font-size: 16px;
+  font-family: Inter;
+  margin: 4px;
+}
+.filter__navigation .views__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 140px;
+  margin-left: 80px;
+}
+.filter__navigation .views__buttons .view1,
+.filter__navigation .views__buttons .view2,
+.filter__navigation .views__buttons .view3 {
+  padding: 4px 12px 4px 12px;
+}
+.filter__navigation .views__buttons .view1 > img,
+.filter__navigation .views__buttons .view2 > img,
+.filter__navigation .views__buttons .view3 > img {
+  width: 35px;
+  height: 35px;
 }/*# sourceMappingURL=index.css.map */
