--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -12,3 +12,6 @@
 @import '../../../components/footer/rgpd/rgpd.scss';
 @import '../../../components/footer/logo/logo.scss';
  
+
+// import pages style components
+@import '../../../pages/collection/collection.scss';
