--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -13,5 +13,6 @@
 @import '../../../components/footer/logo/logo.scss';
  
 
-// import pages style components
-@import '../../../pages/collection/collection.scss';
+// import style components
+@import '../../../components/filter-nav/filter-nav.scss';
+@import '../../../components/lastarticles/lastarticles.scss';
