--- a/assets/style/css/collection.css
+++ b/assets/style/css/collection.css
@@ -1,4 +1,1 @@
-.collection__main-container .filter__container .filter__button > img {
-  width: 15px;
-  height: 15px;
-}/*# sourceMappingURL=collection.css.map */
+/*# sourceMappingURL=collection.css.map */
