display home page with last articles elements

--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -719,4 +719,47 @@ p {
 .filter__navigation .views__buttons .view3 > img {
   width: 35px;
   height: 35px;
+}
+
+.lastarticles__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+.lastarticles__container .article__container {
+  height: 245px;
+  width: 180px;
+  margin: 20px 0;
+}
+.lastarticles__container .article__container .image__article {
+  border-radius: 10px;
+  overflow: hidden;
+}
+.lastarticles__container .article__container .title__container {
+  text-align: center;
+}
+.lastarticles__container .article__container .title__container .title__article {
+  position: relative;
+  top: -70px;
+  height: 70px;
+  width: 180px;
+  max-width: 180px;
+  max-height: 70px;
+  border-radius: 0 0 10px 10px;
+  background: -webkit-gradient(linear, left top, right top, from(#a79300), color-stop(#FFFFFF), to(#b87700));
+  background: linear-gradient(90deg, #a79300, #FFFFFF, #b87700);
+}
+.lastarticles__container .article__container .title__container .title__article > p {
+  color: black;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 21px;
 }/*# sourceMappingURL=index.css.map */
