--- a/assets/style/scss/variables.scss
+++ b/assets/style/scss/variables.scss
@@ -3,7 +3,16 @@
     src: url(../../fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
 }
 
+
+
     $black: #222222 ;
     $white: #EEEEEE ;
     $cream: #FBF4A1 ;
     $cream-alpha: #fbf3a163 ;
+
+    // button linear gradient color
+    $golden: #a79300;
+    $whiteFF: #FFFFFF;
+    $rust:#b87700;
+
+    
