--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -1,6 +1,8 @@
 .header__container {
+    position: fixed;
     display: flex;
     flex-direction: column;
+    width: 100%;
 
     .header__container--top,
     .header__container--bot {
@@ -162,5 +164,5 @@
         transition: 100ms ease-in-out;
     }
 
-     
+
 }
