--- a/components/lastarticles/lastarticles.scss
+++ b/components/lastarticles/lastarticles.scss
@@ -19,12 +19,16 @@
             text-align: center;
            
             .title__article {
+                display: flex;
+                align-items: center;
+
                 position: relative;
                 top: -70px;
                 height: 70px;
                 width: 180px;
                 max-width: 180px;
                 max-height: 70px;
+                
                 border-radius: 0 0 10px 10px;
                 background: linear-gradient(90deg, $golden, $whiteFF, $rust);
                 
