--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -16,3 +16,4 @@
 // import style components
 @import '../../../components/filter/filter-nav.scss';
 @import '../../../components/lastarticles/lastarticles.scss';
+@import '../../../components/newsletter/newsletter.scss';
