--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -59,6 +59,8 @@ table {
   src: url(../../fonts/Inter/Inter-VariableFont_slnt\,wght.ttf);
 }
 body {
+  position: relative;
+  z-index: -10;
   min-width: 390px;
   color: #FBF4A1;
 }
@@ -72,6 +74,22 @@ p {
   font-family: Inter;
   font-size: 16px;
   font-weight: 200;
+}
+
+input {
+  height: 30px;
+  background-color: #EEEEEE;
+  border-radius: 5px;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+  margin-bottom: 10px;
+}
+input:focus-visible {
+  height: 35px;
+  font-size: 1.2rem;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+  border-color: #FBF4A1;
 }
 
 .black-bg {
@@ -194,13 +212,6 @@ p {
   -webkit-transition: 300ms ease-in-out;
   transition: 300ms ease-in-out;
 }
-.header__container .header__container--searchfield .field-search:focus-visible {
-  height: 35px;
-  font-size: 1.2rem;
-  -webkit-transition: 300ms ease-in-out;
-  transition: 300ms ease-in-out;
-  border-color: #FBF4A1;
-}
 .header__container .header__container--zoom {
   margin-left: -35px;
 }
@@ -312,7 +323,8 @@ p {
 }
 
 .menu__ul--profil {
-  position: relative;
+  position: fixed;
+  width: 100%;
   z-index: -2;
   top: -200px;
 }
@@ -778,4 +790,79 @@ p {
   font-size: 14px;
   font-weight: 600;
   line-height: 21px;
+}
+
+.newsletter__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 100px;
+  padding: 12px;
+  width: 92%;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 10px;
+  -webkit-box-shadow: 5px 5px 5px rgba(22, 70, 201, 0.575);
+          box-shadow: 5px 5px 5px rgba(22, 70, 201, 0.575);
+}
+.newsletter__container .newsletter__text {
+  text-align: center;
+  font-family: "Inter";
+  font-size: 14px;
+  line-height: 18px;
+}
+.newsletter__container .newsletter__text > p {
+  font-weight: 400;
+  color: #EEEEEE;
+}
+.newsletter__container .newsletter__subcontainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 15px;
+}
+.newsletter__container .newsletter__subcontainer > label {
+  color: #FFFFFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.newsletter__container .newsletter__subcontainer > input {
+  margin: 15px auto 15px auto;
+  width: 80%;
+}
+.newsletter__container .newsletter__subcontainer > .btn {
+  border: 0;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 600;
+  font-size: 16px;
+  border-radius: 10px;
+  padding: 10px;
+  background: -webkit-gradient(linear, left top, right top, from(#a79300), color-stop(#FFFFFF), to(#b87700));
+  background: linear-gradient(90deg, #a79300, #FFFFFF, #b87700);
 }/*# sourceMappingURL=index.css.map */
