--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -51,13 +51,6 @@
             height: 30px;
             border-radius: 5px;
             transition: 300ms ease-in-out;
-
-            &:focus-visible {
-                height: 35px;
-                font-size: 1.2rem;
-                transition: 300ms ease-in-out;
-                border-color: $cream;
-            }
         }
     }
 
@@ -67,6 +60,7 @@
         & img {
             height: 25px;
             padding: 4px;
+            margin-bottom: 10px;
         }
     }
 
