adding 3 component from previous version

--- a/assets/style/css/collection.css
+++ b/assets/style/css/collection.css
@@ -1,1 +1,4 @@
-/*# sourceMappingURL=collection.css.map */
+.overlayviews__container {
+  position: relative;
+  display: inline-block;
+}/*# sourceMappingURL=collection.css.map */
