--- a/assets/style/scss/index.scss
+++ b/assets/style/scss/index.scss
@@ -17,3 +17,8 @@
 @import '../../../components/filter/filter-nav.scss';
 @import '../../../components/lastarticles/lastarticles.scss';
 @import '../../../components/newsletter/newsletter.scss';
+@import '../../../components/lastgames/lastgames.scss';
+@import '../../../components/view-1/view-1.scss';
+@import '../../../components/view-2/view-2.scss';
+@import '../../../components/view-3/view-3.scss';
+@import '../../../components/filter/filter-overlay.scss';
