--- a/components/filter/filter-nav.scss
+++ b/components/filter/filter-nav.scss
@@ -1,4 +1,8 @@
 .filter__navigation {
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: -1;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -13,6 +17,7 @@
 
 
         .filter__button {
+            cursor: pointer;
             &>img {
                 width: 20px;
                 height: 20px;
@@ -38,6 +43,7 @@
         .view1,
         .view2,
         .view3 {
+            cursor: pointer;
             padding: 4px 12px 4px 12px;
 
             &>img {
