--- a/assets/style/scss/global.scss
+++ b/assets/style/scss/global.scss
@@ -42,8 +42,16 @@ input {
     background-color: $white;
 }
 
+.whiteFF-bg {
+    background-color: $whiteFF;
+}
+
 .cream-alpha-color {
     color: $cream-alpha;
+}
+
+.bluedark-color {
+    color : $bluedark;
 }
 
 .main__container {
