--- a/components/filter/filter-overlay.scss
+++ b/components/filter/filter-overlay.scss
@@ -1,69 +1,59 @@
 .overlay__maincontainer {
     position: fixed;
     z-index: 3;
-    border: 2px solid red;
+
     width: 340px;
     height: 100vh;
-    top: 65px;
+    top: 170px;
     left: -350px;
-    overflow-y: scroll;
+    overflow-y: auto;
 
-    .active {
-        left: 0px;
-    }
-
-    .overlay__box--filter {
-        border: 2px dotted red;
-
-        .title__filter {
-
-            &>h2 {
-                font-family: 'Inter';
-                font-size: 24px;
-                font-weight: 900;
-                line-height: 27px;
-            }
-        }
-
-
-        .list__filter--box {
-
-            border: 2px solid rgb(29, 194, 37);
-
-            .filters-box {
-                display: flex;
-                flex-direction: row;
-                justify-content: space-between;
-                align-items: center;
-                border: 2px dotted rgb(29, 194, 37);
-
-
-
-                .name_filter {
-                    & > p {
-                        color: aqua;
-                       font-size: 14px;
-                       font-weight: 400;
-                       line-height: 27px; 
-                    }
-                }
-
-                .quantity_filter {
-
-                    & > p {
-
-                        color: rgb(180, 177, 174);
-                    }
-                }
-
-            }
-
-
-
-        }
-
-
-
-
+    &.show {
+        left: 0px
     }
 }
+        .overlay__box--filter {
+       
+
+            .title__filter {
+
+                &>h2 {
+                    font-family: 'Inter';
+                    font-size: 24px;
+                    font-weight: 700;
+                    line-height: 27px;
+                }
+            }
+
+
+            .list__filter--box {
+
+             
+
+                .filters-box {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+
+
+
+                    .name_filter {
+                        &>p {
+                            font-size: 14px;
+                            font-weight: 400;
+                            line-height: 27px;
+                        }
+                    }
+
+                    .quantity_filter {
+
+                        &>p {
+
+                            color: rgb(180, 177, 174);
+                        }
+                    }
+                }
+            }
+        }
+    
