--- a/assets/style/css/lastgames.css
+++ b/assets/style/css/lastgames.css
@@ -24,7 +24,7 @@ First Part of CSS collection view 1
   text-align: center;
   margin: 20px;
   font-size: 24px;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
 }
 
 .lastgames-items__last-items-container {
@@ -55,7 +55,7 @@ First Part of CSS collection view 1
           justify-content: center;
   margin-bottom: 20px;
   padding: 10px;
-  width: 140px;
+  width: 160px;
 }
 
 .lastgames-items__coverimage {
@@ -64,8 +64,8 @@ First Part of CSS collection view 1
   width: 140px;
   height: 140px;
   text-align: center;
-  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
-          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
+  -webkit-box-shadow: 2px 2px 10px 0px;
+          box-shadow: 2px 2px 10px 0px;
   -webkit-transition: 500ms ease-in-out;
   transition: 500ms ease-in-out;
   -webkit-transform: rotate(2deg);
@@ -94,26 +94,27 @@ First Part of CSS collection view 1
 .collection-items__title {
   text-align: left;
   margin-top: 10px;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
+  font-weight: 600;
 }
 
 .lastgames-items__subtitle,
 .collection-items__subtitle {
   text-align: left;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 14px;
 }
 
 .lastgames-items__plateform,
 .lastgames-items__plateform {
   text-align: right;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
   font-size: 14px;
 }
 
 .lastgames-items__footer-list {
   text-align: right;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
   font-size: 14px;
 }
 
@@ -161,7 +162,7 @@ First Part of CSS collection view 1
   text-align: left;
   margin-top: 10px;
   margin-left: 10%;
-  font-family: "PTSans-BoldItalic";
+  font-family: "Inter";
   font-size: 24px;
 }
 
@@ -169,14 +170,14 @@ First Part of CSS collection view 1
   text-align: left;
   margin-top: 10px;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 20px;
 }
 
 .lastgames-maxitem__plateform {
   text-align: left;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 16px;
   margin-top: 5px;
 }
@@ -184,7 +185,7 @@ First Part of CSS collection view 1
 .lastgames-maxitem__year {
   text-align: left;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 16px;
   margin-top: 5px;
 }
@@ -213,21 +214,21 @@ First Part of CSS collection view 1
 .lastgames-maxitem__editor {
   margin-top: 5px;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 16px;
 }
 
 .lastgames-maxitem__genre {
   margin-top: 30px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 14px;
 }
 
 .lastgames-maxitem__subcontainer {
   margin-top: 5px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 12px;
 }
 
@@ -246,7 +247,7 @@ First Part of CSS collection view 1
 .lastgames-maxitem__price {
   margin-top: 15px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 13px;
   line-height: 9.5px;
   color: var(--clr__grey6D);
@@ -388,5 +389,5 @@ First Part of CSS collection view 1
 .collection-items__year,
 .collection-items__plateform {
   font-size: 12px;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
 }/*# sourceMappingURL=lastgames.css.map */
