--- a/assets/style/css/view-1.css
+++ b/assets/style/css/view-1.css
@@ -24,7 +24,7 @@ First Part of CSS collection view 1
   text-align: center;
   margin: 20px;
   font-size: 24px;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
 }
 
 .view1-items__last-items-container {
@@ -94,26 +94,26 @@ First Part of CSS collection view 1
 .collection-items__title {
   text-align: left;
   margin-top: 10px;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
 }
 
 .view1-items__subtitle,
 .collection-items__subtitle {
   text-align: left;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 14px;
 }
 
 .view1-items__plateform,
 .view1-items__plateform {
   text-align: right;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
   font-size: 14px;
 }
 
 .view1-items__footer-list {
   text-align: right;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
   font-size: 14px;
 }
 
@@ -161,7 +161,7 @@ First Part of CSS collection view 1
   text-align: left;
   margin-top: 10px;
   margin-left: 10%;
-  font-family: "PTSans-BoldItalic";
+  font-family: "Inter-BoldI";
   font-size: 24px;
 }
 
@@ -169,14 +169,14 @@ First Part of CSS collection view 1
   text-align: left;
   margin-top: 10px;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 20px;
 }
 
 .view1-maxitem__plateform {
   text-align: left;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 16px;
   margin-top: 5px;
 }
@@ -184,7 +184,7 @@ First Part of CSS collection view 1
 .view1-maxitem__year {
   text-align: left;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 16px;
   margin-top: 5px;
 }
@@ -213,21 +213,21 @@ First Part of CSS collection view 1
 .view1-maxitem__editor {
   margin-top: 5px;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 16px;
 }
 
 .view1-maxitem__genre {
   margin-top: 30px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 14px;
 }
 
 .view1-maxitem__subcontainer {
   margin-top: 5px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 12px;
 }
 
@@ -246,7 +246,7 @@ First Part of CSS collection view 1
 .view1-maxitem__price {
   margin-top: 15px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 13px;
   line-height: 9.5px;
   color: var(--clr__grey6D);
@@ -388,5 +388,5 @@ First Part of CSS collection view 1
 .collection-items__year,
 .collection-items__plateform {
   font-size: 12px;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
 }/*# sourceMappingURL=view-1.css.map */
