--- a/assets/style/scss/variables.scss
+++ b/assets/style/scss/variables.scss
@@ -4,12 +4,16 @@
 }
 
 
-
+    
     $black: #222222 ;
     $white: #EEEEEE ;
+    $grey: #cacaca;
     $bluedark: #2400ff;
     $cream: #FBF4A1 ;
     $cream-alpha: #fbf3a163 ;
+    $green : #289800;
+    $orange : #9c5e00;
+    $red : #9e0000;
 
     // button linear gradient color
     $golden: #a79300;
