--- a/assets/style/css/index.css
+++ b/assets/style/css/index.css
@@ -92,6 +92,19 @@ input:focus-visible {
   border-color: #FBF4A1;
 }
 
+h3 {
+  margin-top: 10px;
+  font-family: "Inter";
+  font-weight: 600;
+  font-size: 16px;
+}
+
+h4 {
+  font-family: "Inter";
+  font-weight: 400;
+  font-size: 16px;
+}
+
 .black-bg {
   background-color: #222222;
 }
@@ -110,6 +123,10 @@ input:focus-visible {
 
 .bluedark-color {
   color: #2400ff;
+}
+
+.green-color {
+  color: #289800 !important;
 }
 
 .main__container {
@@ -340,6 +357,9 @@ input:focus-visible {
 .menu__ul--profil.active {
   top: 98px;
 }
+.menu__ul--profil .collection {
+  cursor: pointer;
+}
 .menu__ul--profil .menu__icon p {
   padding: 10px;
   text-align: center;
@@ -360,6 +380,7 @@ input:focus-visible {
   }
   .menu__ul--profil.active {
     top: 55px;
+    padding-top: 20px;
   }
   .menu__ul--profil .menu__icon p {
     border-bottom: 0;
@@ -704,7 +725,10 @@ input:focus-visible {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 10px 45px;
+  padding: 10px;
+}
+.filter__navigation.show {
+  top: 110px;
 }
 .filter__navigation .filter__container {
   display: -webkit-box;
@@ -760,6 +784,11 @@ input:focus-visible {
   height: 35px;
 }
 
+@media screen and (min-width: 744px) {
+  .filter__navigation.show {
+    top: 50px;
+  }
+}
 .lastarticles__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -781,6 +810,8 @@ input:focus-visible {
 .lastarticles__container .article__container .image__article {
   border-radius: 10px;
   overflow: hidden;
+  -webkit-box-shadow: 2px 2px 10px 0px;
+          box-shadow: 2px 2px 10px 0px;
 }
 .lastarticles__container .article__container .title__container {
   text-align: center;
@@ -809,6 +840,22 @@ input:focus-visible {
   line-height: 21px;
 }
 
+@media screen and (min-width: 744px) {
+  .lastarticles__container .article__container {
+    width: 340px;
+  }
+  .lastarticles__container .article__container .image__article img {
+    width: 100%;
+    height: 260px;
+  }
+  .lastarticles__container .article__container .title__container .title__article {
+    width: 340px;
+    max-width: 340px;
+  }
+  .lastarticles__container .article__container .title__container .title__article p {
+    width: 100%;
+  }
+}
 .newsletter__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -826,8 +873,8 @@ input:focus-visible {
   margin-left: auto;
   margin-right: auto;
   border-radius: 10px;
-  -webkit-box-shadow: 5px 5px 5px rgba(22, 70, 201, 0.575);
-          box-shadow: 5px 5px 5px rgba(22, 70, 201, 0.575);
+  -webkit-box-shadow: 2px 2px 10px 0px;
+          box-shadow: 2px 2px 10px 0px;
 }
 .newsletter__container .newsletter__text {
   text-align: center;
@@ -910,7 +957,7 @@ First Part of CSS collection view 1
   text-align: center;
   margin: 20px;
   font-size: 24px;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
 }
 
 .lastgames-items__last-items-container {
@@ -941,7 +988,7 @@ First Part of CSS collection view 1
           justify-content: center;
   margin-bottom: 20px;
   padding: 10px;
-  width: 140px;
+  width: 145px;
 }
 
 .lastgames-items__coverimage {
@@ -950,8 +997,8 @@ First Part of CSS collection view 1
   width: 140px;
   height: 140px;
   text-align: center;
-  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
-          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
+  -webkit-box-shadow: 2px 2px 10px 0px;
+          box-shadow: 2px 2px 10px 0px;
   -webkit-transition: 500ms ease-in-out;
   transition: 500ms ease-in-out;
   -webkit-transform: rotate(2deg);
@@ -980,26 +1027,36 @@ First Part of CSS collection view 1
 .collection-items__title {
   text-align: left;
   margin-top: 10px;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
+  font-weight: 600;
 }
 
 .lastgames-items__subtitle,
 .collection-items__subtitle {
   text-align: left;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 14px;
 }
 
-.lastgames-items__plateform,
 .lastgames-items__plateform {
-  text-align: right;
-  font-family: "PTSans-Italic";
+  text-align: left;
+  font-family: "Inter";
   font-size: 14px;
+}
+.lastgames-items__plateform > img {
+  position: relative;
+  height: 21px;
+  top: -193px;
+  left: -20px;
+  padding: 3px 12px !important;
+  border: 1px solid #cacaca;
+  border-radius: 10px;
+  background-color: #EEEEEE;
 }
 
 .lastgames-items__footer-list {
   text-align: right;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
   font-size: 14px;
 }
 
@@ -1047,7 +1104,7 @@ First Part of CSS collection view 1
   text-align: left;
   margin-top: 10px;
   margin-left: 10%;
-  font-family: "PTSans-BoldItalic";
+  font-family: "Inter";
   font-size: 24px;
 }
 
@@ -1055,14 +1112,14 @@ First Part of CSS collection view 1
   text-align: left;
   margin-top: 10px;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 20px;
 }
 
 .lastgames-maxitem__plateform {
   text-align: left;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 16px;
   margin-top: 5px;
 }
@@ -1070,7 +1127,7 @@ First Part of CSS collection view 1
 .lastgames-maxitem__year {
   text-align: left;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 16px;
   margin-top: 5px;
 }
@@ -1099,21 +1156,21 @@ First Part of CSS collection view 1
 .lastgames-maxitem__editor {
   margin-top: 5px;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 16px;
 }
 
 .lastgames-maxitem__genre {
   margin-top: 30px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 14px;
 }
 
 .lastgames-maxitem__subcontainer {
   margin-top: 5px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 12px;
 }
 
@@ -1132,7 +1189,7 @@ First Part of CSS collection view 1
 .lastgames-maxitem__price {
   margin-top: 15px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 13px;
   line-height: 9.5px;
   color: var(--clr__grey6D);
@@ -1274,7 +1331,7 @@ First Part of CSS collection view 1
 .collection-items__year,
 .collection-items__plateform {
   font-size: 12px;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
 }
 
 /*
@@ -1303,7 +1360,7 @@ First Part of CSS collection view 1
   text-align: center;
   margin: 20px;
   font-size: 24px;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
 }
 
 .view1-items__last-items-container {
@@ -1372,27 +1429,34 @@ First Part of CSS collection view 1
 .view1-items__title,
 .collection-items__title {
   text-align: left;
-  margin-top: 10px;
-  font-family: "PTSans-Bold";
 }
 
 .view1-items__subtitle,
 .collection-items__subtitle {
   text-align: left;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 14px;
 }
 
-.view1-items__plateform,
 .view1-items__plateform {
-  text-align: right;
-  font-family: "PTSans-Italic";
+  text-align: left;
+  font-family: "Inter";
   font-size: 14px;
+}
+.view1-items__plateform > img {
+  position: relative;
+  height: 21px;
+  top: -180px;
+  left: -20px;
+  padding: 3px 12px !important;
+  border: 1px solid #cacaca;
+  border-radius: 10px;
+  background-color: #EEEEEE;
 }
 
 .view1-items__footer-list {
   text-align: right;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
   font-size: 14px;
 }
 
@@ -1431,7 +1495,7 @@ First Part of CSS collection view 1
   text-align: left;
   margin-top: 10px;
   margin-left: 10%;
-  font-family: "PTSans-BoldItalic";
+  font-family: "Inter-BoldI";
   font-size: 24px;
 }
 
@@ -1439,14 +1503,14 @@ First Part of CSS collection view 1
   text-align: left;
   margin-top: 10px;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 20px;
 }
 
 .view1-maxitem__plateform {
   text-align: left;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 16px;
   margin-top: 5px;
 }
@@ -1454,7 +1518,7 @@ First Part of CSS collection view 1
 .view1-maxitem__year {
   text-align: left;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 16px;
   margin-top: 5px;
 }
@@ -1483,21 +1547,21 @@ First Part of CSS collection view 1
 .view1-maxitem__editor {
   margin-top: 5px;
   margin-left: 10%;
-  font-family: "PTSans-Bold";
+  font-family: "Inter";
   font-size: 16px;
 }
 
 .view1-maxitem__genre {
   margin-top: 30px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 14px;
 }
 
 .view1-maxitem__subcontainer {
   margin-top: 5px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 12px;
 }
 
@@ -1516,7 +1580,7 @@ First Part of CSS collection view 1
 .view1-maxitem__price {
   margin-top: 15px;
   margin-left: 10%;
-  font-family: "PTSans-Regular";
+  font-family: "Inter";
   font-size: 13px;
   line-height: 9.5px;
   color: var(--clr__grey6D);
@@ -1658,7 +1722,7 @@ First Part of CSS collection view 1
 .collection-items__year,
 .collection-items__plateform {
   font-size: 12px;
-  font-family: "PTSans-Italic";
+  font-family: "Inter";
 }
 
 /*
@@ -2220,6 +2284,10 @@ First Part of CSS collection view 1
       flex-wrap: wrap;
   width: 100%;
 }
+.myitems-items__last-items-container p {
+  color: #222222;
+  font-weight: 400;
+}
 
 .myitems-items__last-items {
   display: -webkit-box;
@@ -2528,9 +2596,9 @@ First Part of CSS collection view 1
 .collection-items__coverimage img {
   -webkit-box-shadow: 5px 5px 5px var(--clr__grey6D);
           box-shadow: 5px 5px 5px var(--clr__grey6D);
-  width: 100px;
+  width: 140px;
   height: auto;
-  min-height: 80px;
+  min-height: 140px;
 }
 
 .collection-items__coverimage {
@@ -2541,8 +2609,8 @@ First Part of CSS collection view 1
       -ms-flex-pack: center;
           justify-content: center;
   overflow: hidden;
-  width: 80px;
-  height: 80px;
+  width: 140px;
+  height: 140px;
   text-align: center;
 }
 
@@ -2593,8 +2661,8 @@ First Part of CSS collection view 2
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  background-color: aliceblue;
-  /* padding: 5px; */
+  background-color: #EEEEEE;
+  border-bottom: 1px solid #222222;
 }
 
 .collection-basicinfos__subcontainer {
@@ -2609,13 +2677,59 @@ First Part of CSS collection view 2
       -ms-flex-pack: center;
           justify-content: center;
 }
+.collection-basicinfos__subcontainer.view3 {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  padding: 5px;
+}
+
+.collection-statesinfos__subcontainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 100%;
+  padding: 5px;
+}
+.collection-statesinfos__subcontainer .collection-items__prices,
+.collection-statesinfos__subcontainer .collection-items__date,
+.collection-statesinfos__subcontainer .collection-items__state {
+  margin-bottom: 4px;
+}
+.collection-statesinfos__subcontainer .collection-items__prices span,
+.collection-statesinfos__subcontainer .collection-items__date span,
+.collection-statesinfos__subcontainer .collection-items__state span {
+  font-weight: 600;
+}
+
+.checkbox {
+  cursor: pointer;
+  border-color: #a79300;
+  width: 30px;
+  height: 30px;
+  margin-top: 10px;
+}
 
 .select__bar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 22px;
-  background-color: rgb(220, 220, 245);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 80px;
+  background-color: #222222;
 }
 
 .collection-basicinfos__container {
@@ -2629,17 +2743,25 @@ First Part of CSS collection view 2
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 50%;
+  width: 80%;
   padding: 5px;
 }
 
 .collection-arrow {
   position: absolute;
-  right: 40px;
+  right: 0px;
 }
 
 .collection-items__title {
-  margin-top: -5px;
+  border-radius: 5px;
+  word-break: break-word;
+  margin: 0 6px;
+  background-color: #FFFFFF;
+}
+.collection-items__title h3 {
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 5px;
 }
 
 .collection-items__subtitle,
@@ -2647,6 +2769,7 @@ First Part of CSS collection view 2
 .collection-items__year,
 .collection-items__plateform {
   padding: 2px;
+  margin-right: 5%;
 }
 
 .bot-items__subcontainer {
@@ -2695,15 +2818,35 @@ First Part of CSS collection view 2
   position: fixed;
   z-index: 3;
   width: 340px;
-  height: 100vh;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   top: 170px;
-  left: -350px;
-  overflow-y: scroll;
+  left: -380px;
+  overflow-y: auto;
+  border: 2px solid #222222;
+  border-radius: 0 10px;
+  margin: 2px 0;
+  padding: 10px;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
 }
 .overlay__maincontainer.show {
   left: 0px;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
 }
 
+.overlay__box--filter {
+  margin-bottom: 40px;
+}
+.overlay__box--filter .title__filter {
+  margin-bottom: 5px;
+  background-color: rgba(251, 243, 161, 0.3882352941);
+  border-radius: 5px;
+  -webkit-box-shadow: #a79300 -1px 1px 2px 0px;
+          box-shadow: #a79300 -1px 1px 2px 0px;
+}
 .overlay__box--filter .title__filter > h2 {
   font-family: "Inter";
   font-size: 24px;
@@ -2731,5 +2874,24 @@ First Part of CSS collection view 2
   line-height: 27px;
 }
 .overlay__box--filter .list__filter--box .filters-box .quantity_filter > p {
-  color: rgb(180, 177, 174);
+  color: #222222;
+}
+
+@media screen and (min-width: 744px) {
+  .overlay__maincontainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    top: 112px;
+    left: -2160px;
+    width: 80%;
+  }
+  .overlay__maincontainer .overlay__box--filter {
+    width: 30%;
+  }
 }/*# sourceMappingURL=index.css.map */
