--- a/components/filter/filter-nav.scss
+++ b/components/filter/filter-nav.scss
@@ -6,7 +6,11 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 10px 45px;
+    padding: 10px;
+
+    &.show {
+        top: 110px;
+    }
 
     .filter__container {
         display: flex;
@@ -52,4 +56,18 @@
             }
         }
     }
+}
+
+@media screen and (min-width : 744px) {
+    
+    
+    .filter__navigation {
+
+        
+        &.show {
+            top: 50px;
+        }
+        
+    }
+
 }
