--- a/components/filter/filter-overlay.scss
+++ b/components/filter/filter-overlay.scss
@@ -3,57 +3,90 @@
     z-index: 3;
 
     width: 340px;
-    height: 100vh;
+    height: fit-content;
     top: 170px;
-    left: -350px;
+    left: -380px;
     overflow-y: auto;
 
+    border: 2px solid $black;
+    border-radius: 0 10px;
+    margin: 2px 0;
+    padding: 10px;
+
+    transition: 300ms ease-in-out;
+
     &.show {
-        left: 0px
+        left: 0px;
+        transition: 300ms ease-in-out;
     }
 }
-        .overlay__box--filter {
-       
 
-            .title__filter {
+.overlay__box--filter {
+    margin-bottom: 40px;
 
-                &>h2 {
-                    font-family: 'Inter';
-                    font-size: 24px;
-                    font-weight: 700;
+    .title__filter {
+        margin-bottom: 5px;
+        background-color: $cream-alpha;
+        border-radius: 5px;
+        box-shadow: $golden -1px 1px 2px 0px;
+        ;
+
+        &>h2 {
+            font-family: 'Inter';
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 27px;
+        }
+    }
+
+
+    .list__filter--box {
+
+
+
+        .filters-box {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+
+
+
+            .name_filter {
+                &>p {
+                    font-size: 14px;
+                    font-weight: 400;
                     line-height: 27px;
                 }
             }
 
+            .quantity_filter {
 
-            .list__filter--box {
+                &>p {
 
-             
-
-                .filters-box {
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-between;
-                    align-items: center;
-
-
-
-                    .name_filter {
-                        &>p {
-                            font-size: 14px;
-                            font-weight: 400;
-                            line-height: 27px;
-                        }
-                    }
-
-                    .quantity_filter {
-
-                        &>p {
-
-                            color: rgb(180, 177, 174);
-                        }
-                    }
+                    color: $black;
                 }
             }
         }
-    
+    }
+}
+
+@media screen and (min-width : 744px) {
+
+    .overlay__maincontainer {
+
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        top:112px;
+        left: -2160px;
+        width: 80%;
+
+        .overlay__box--filter {
+          width: 30%;
+        
+        }
+
+    }
+
+}
