--- a/components/lastarticles/lastarticles.scss
+++ b/components/lastarticles/lastarticles.scss
@@ -12,6 +12,7 @@
         .image__article {
             border-radius: 10px;            
             overflow: hidden;
+            box-shadow: 2px 2px 10px 0px;
         }
 
         .title__container {
@@ -42,4 +43,33 @@
             }
         }
     }
+}
+
+@media screen and (min-width : 744px) {
+    .lastarticles__container {
+
+    
+    .article__container {
+        width : 340px;
+
+        .image__article {
+            img {
+                width: 100%;
+                height: 260px;
+            }
+        }
+
+        .title__container {
+
+            .title__article {
+                width: 340px;
+                max-width: 340px;
+
+                p {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
 }
