--- a/components/lastgames/lastgames.scss
+++ b/components/lastgames/lastgames.scss
@@ -20,7 +20,7 @@ First Part of CSS collection view 1
         text-align: center;
         margin: 20px;
         font-size: 24px;
-        font-family: 'PTSans-Bold';
+        font-family: 'Inter';
     }
 }
 
@@ -38,7 +38,7 @@ First Part of CSS collection view 1
     justify-content: center;
     margin-bottom: 20px;
     padding: 10px;
-    width: 140px;
+    width: 145px;
 }
 
 .lastgames-items__coverimage {
@@ -47,7 +47,7 @@ First Part of CSS collection view 1
     width: 140px;
     height: 140px;
     text-align: center;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
+    box-shadow: 2px 2px 10px 0px;
     transition: 500ms ease-in-out;
     transform: rotate(2deg);
 }
@@ -72,26 +72,37 @@ First Part of CSS collection view 1
 .collection-items__title {
     text-align: left;
     margin-top: 10px;
-    font-family: 'PTSans-Bold';
+    font-family: 'Inter';
+    font-weight: 600;
 }
 
 .lastgames-items__subtitle,
 .collection-items__subtitle {
     text-align: left;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 14px;
 }
 
-.lastgames-items__plateform,
 .lastgames-items__plateform {
-    text-align: right;
-    font-family: 'PTSans-Italic';
+    text-align: left;
+    font-family: 'Inter';
     font-size: 14px;
+
+    & > img {
+        position: relative;
+        height: 21px;
+        top: -193px;
+        left:-20px;
+        padding: 3px 12px !important;
+        border: 1px solid $grey;
+        border-radius: 10px;
+        background-color: $white;
+    }
 }
 
 .lastgames-items__footer-list {
     text-align: right;
-    font-family: 'PTSans-Italic';
+    font-family: 'Inter';
     font-size: 14px;
 }
 
@@ -125,7 +136,7 @@ First Part of CSS collection view 1
     text-align: left;
     margin-top: 10px;
     margin-left: 10%;
-    font-family: 'PTSans-BoldItalic';
+    font-family: 'Inter';
     font-size: 24px;
 }
 
@@ -133,14 +144,14 @@ First Part of CSS collection view 1
     text-align: left;
     margin-top: 10px;
     margin-left: 10%;
-    font-family: 'PTSans-Bold';
+    font-family: 'Inter';
     font-size: 20px;
 }
 
 .lastgames-maxitem__plateform {
     text-align: left;
     margin-left: 10%;
-    font-family: 'PTSans-Bold';
+    font-family: 'Inter';
     font-size: 16px;
     margin-top: 5px;
 }
@@ -148,7 +159,7 @@ First Part of CSS collection view 1
 .lastgames-maxitem__year {
     text-align: left;
     margin-left: 10%;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 16px;
     margin-top: 5px;
 }
@@ -170,21 +181,21 @@ First Part of CSS collection view 1
 .lastgames-maxitem__editor {
     margin-top: 5px;
     margin-left: 10%;
-    font-family: 'PTSans-Bold';
+    font-family: 'Inter';
     font-size: 16px;
 }
 
 .lastgames-maxitem__genre {
     margin-top: 30px;
     margin-left: 10%;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 14px;
 }
 
 .lastgames-maxitem__subcontainer {
     margin-top: 5px;
     margin-left: 10%;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 12px;
 }
 
@@ -203,7 +214,7 @@ First Part of CSS collection view 1
 .lastgames-maxitem__price {
     margin-top: 15px;
     margin-left: 10%;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 13px;
     line-height: 9.5px;
     color: var(--clr__grey6D);
@@ -306,6 +317,6 @@ First Part of CSS collection view 1
 .collection-items__year,
 .collection-items__plateform {
     font-size: 12px;
-    font-family: 'PTSans-Italic';
+    font-family: 'Inter';
 
 }
