--- a/components/newsletter/newsletter.scss
+++ b/components/newsletter/newsletter.scss
@@ -10,7 +10,7 @@
     margin-right: auto;
 
     border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(22, 70, 201, 0.575);
+    box-shadow: 2px 2px 10px 0px;
    
     .newsletter__text {
         text-align: center;
