--- a/components/view-1/view-1.scss
+++ b/components/view-1/view-1.scss
@@ -20,7 +20,7 @@ First Part of CSS collection view 1
         text-align: center;
         margin: 20px;
         font-size: 24px;
-        font-family: 'PTSans-Bold';
+        font-family: 'Inter';
     }
 }
 
@@ -71,27 +71,38 @@ First Part of CSS collection view 1
 .view1-items__title,
 .collection-items__title {
     text-align: left;
-    margin-top: 10px;
-    font-family: 'PTSans-Bold';
 }
+
+
+
 
 .view1-items__subtitle,
 .collection-items__subtitle {
     text-align: left;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 14px;
 }
 
-.view1-items__plateform,
 .view1-items__plateform {
-    text-align: right;
-    font-family: 'PTSans-Italic';
+    text-align: left;
+    font-family: 'Inter';
     font-size: 14px;
+
+    & > img {
+        position: relative;
+        height: 21px;
+        top: -180px;
+        left:-20px;
+        padding: 3px 12px !important;
+        border: 1px solid $grey;
+        border-radius: 10px;
+        background-color: $white;
+    }
 }
 
 .view1-items__footer-list {
     text-align: right;
-    font-family: 'PTSans-Italic';
+    font-family: 'Inter';
     font-size: 14px;
 }
 
@@ -125,7 +136,7 @@ First Part of CSS collection view 1
     text-align: left;
     margin-top: 10px;
     margin-left: 10%;
-    font-family: 'PTSans-BoldItalic';
+    font-family: 'Inter-BoldI';
     font-size: 24px;
 }
 
@@ -133,14 +144,14 @@ First Part of CSS collection view 1
     text-align: left;
     margin-top: 10px;
     margin-left: 10%;
-    font-family: 'PTSans-Bold';
+    font-family: 'Inter';
     font-size: 20px;
 }
 
 .view1-maxitem__plateform {
     text-align: left;
     margin-left: 10%;
-    font-family: 'PTSans-Bold';
+    font-family: 'Inter';
     font-size: 16px;
     margin-top: 5px;
 }
@@ -148,7 +159,7 @@ First Part of CSS collection view 1
 .view1-maxitem__year {
     text-align: left;
     margin-left: 10%;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 16px;
     margin-top: 5px;
 }
@@ -170,21 +181,21 @@ First Part of CSS collection view 1
 .view1-maxitem__editor {
     margin-top: 5px;
     margin-left: 10%;
-    font-family: 'PTSans-Bold';
+    font-family: 'Inter';
     font-size: 16px;
 }
 
 .view1-maxitem__genre {
     margin-top: 30px;
     margin-left: 10%;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 14px;
 }
 
 .view1-maxitem__subcontainer {
     margin-top: 5px;
     margin-left: 10%;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 12px;
 }
 
@@ -203,7 +214,7 @@ First Part of CSS collection view 1
 .view1-maxitem__price {
     margin-top: 15px;
     margin-left: 10%;
-    font-family: 'PTSans-Regular';
+    font-family: 'Inter';
     font-size: 13px;
     line-height: 9.5px;
     color: var(--clr__grey6D);
@@ -306,6 +317,6 @@ First Part of CSS collection view 1
 .collection-items__year,
 .collection-items__plateform {
     font-size: 12px;
-    font-family: 'PTSans-Italic';
+    font-family: 'Inter';
 
 }
