--- a/components/lastgames/lastgames.scss
+++ b/components/lastgames/lastgames.scss
@@ -11,7 +11,7 @@ First Part of CSS collection view 1
     display: flex;
     flex-direction: column;
     border-radius: 20px;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
     padding: 20px;
     height: fit-content;
     background-color: var(--clr__whiteFF-alpha);
@@ -104,6 +104,11 @@ First Part of CSS collection view 1
     text-align: right;
     font-family: 'Inter';
     font-size: 14px;
+
+    p {
+        color: $black;
+        font-weight: 400;
+    }
 }
 
 .display__maxitem {
