--- a/components/header/nagivation/navigation.scss
+++ b/components/header/nagivation/navigation.scss
@@ -1,5 +1,4 @@
 .profilarrow {
-
     .down {
         transition: 100ms ease-in-out;
         rotate: 180deg;
@@ -11,9 +10,10 @@
 
     .menu__ul {
         position: fixed;
+        z-index: -1;
         top: -50px;
         width: 100%;
-        z-index: -1;
+
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
@@ -21,15 +21,13 @@
         &.active {
             top: 98px;
         }
-
     }
-
 }
 
 .menu__ul--profil {
     position: fixed;
-    width: 100%;;
     z-index: 0;
+    width: 100%;
     top: -200px;
 
     &.active {
@@ -39,45 +37,28 @@
     .collection {
         cursor: pointer;
     }
-
-
     .menu__icon p {
         padding: 10px;
         text-align: center;
         border-bottom: 1px solid $cream;
     }
-
 }
-
 
 
 @media screen and (min-width:744px) {
     
-.menu__ul--profil {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    .menu__ul--profil {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
 
-    &.active {
-        top: 55px;
-        padding-top: 20px;
+        &.active {
+            top: 55px;
+            padding-top: 20px;
+        }
+
+        .menu__icon p {
+            border-bottom: 0;
+        }
     }
-
-    .menu__icon p {
-        border-bottom: 0;
-    }
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
 }
