--- a/components/view-3/view-3.scss
+++ b/components/view-3/view-3.scss
@@ -3,39 +3,37 @@
 First Part of CSS collection view 1
 ------------------------------------
 */
-
-
-
 .myitems-items__container {
-    position:relative;
+    position: relative;
     display: flex;
     flex-direction: column;
     border-radius: 20px;
     margin-bottom: 100px;
-    padding: 20px;  
+    padding: 20px;
     height: fit-content;
     background-color: var(--clr__whiteFF-alpha);
+
+    .myitems-items__maintitle {
+        text-align: center;
+        margin: 20px;
+        font-size: 24px;
+        font-family: 'PTSans-Bold';
+    }
+
+    .myitems-items__last-items-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        width: 100%;
+
+        p {
+            color: $black;
+            font-weight: 400;
+        }
+    }
 }
 
-.myitems-items__maintitle {
-    text-align: center;
-    margin: 20px;
-    font-size: 24px;
-    font-family: 'PTSans-Bold';
-}
-
-.myitems-items__last-items-container {
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-flex-wrap: wrap;
-width: 100%;
-
-p {
-    color: $black;
-    font-weight: 400;
-}
-}
 .myitems-items__last-items {
     display: flex;
     flex-direction: column;
@@ -44,15 +42,16 @@ p {
     padding: 10px;
     width: 140px;
 }
+
 .myitems-items__coverimage {
-overflow: hidden;
-border-radius: 5px;
-width: 140px;
-height: 140px;
-text-align: center;
-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
-transition: 500ms ease-in-out;
-transform: rotate(2deg);
+    overflow: hidden;
+    border-radius: 5px;
+    width: 140px;
+    height: 140px;
+    text-align: center;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
+    transition: 500ms ease-in-out;
+    transform: rotate(2deg);
 }
 
 .myitems-items__coverimage:hover {
@@ -61,28 +60,24 @@ transform: rotate(2deg);
     cursor: pointer;
 }
 
-.myitems-items__coverimage img{
-width: 150px;
-height:auto;
-min-height: 150px;
+.myitems-items__coverimage img {
+    width: 150px;
+    height: auto;
+    min-height: 150px;
 }
+
 .selected__item {
     border: red 4px solid;
 }
-.myitems-items__title,
-.collection-items__title {
-    text-align: left;
-    margin-top: 10px;
-    font-family: 'PTSans-Bold';
-}
-.myitems-items__subtitle,
-.collection-items__subtitle {
+
+.view2-items__subtitle,
+.view3-items__subtitle {
     text-align: left;
     font-family: 'PTSans-Regular';
     font-size: 14px;
 }
-.myitems-items__plateform,
-.myitems-items__plateform  {
+
+.myitems-items__plateform {
     text-align: right;
     font-family: 'PTSans-Italic';
     font-size: 14px;
@@ -93,30 +88,28 @@ min-height: 150px;
     font-family: 'PTSans-Italic';
     font-size: 14px;
 }
+
 .display__maxitem {
     display: flex;
     flex-direction: column;
-    background-color:var(--clr__whiteFF); 
+    background-color: var(--clr__whiteFF);
     width: 0vw;
     height: fit-content;
     border-radius: 10px;
     line-height: 15px;
-    animation: maxify 10ms forwards;  
+    animation: maxify 10ms forwards;
 }
 
 @keyframes maxify {
     0% {
         width: 0vw;
     }
+
     100% {
         width: 100vw;
     }
 }
 
-
-.hidden__field {
-    display: none;
-}
 .myitems-maxitem__title {
     text-align: left;
     margin-top: 10px;
@@ -124,6 +117,7 @@ min-height: 150px;
     font-family: 'PTSans-BoldItalic';
     font-size: 24px;
 }
+
 .myitems-maxitem__subtitle {
     text-align: left;
     margin-top: 10px;
@@ -147,13 +141,15 @@ min-height: 150px;
     font-size: 16px;
     margin-top: 5px;
 }
+
 .myitems-maxitem__coverimage {
     display: flex;
     flex-direction: row;
     justify-content: center;
     margin-top: 5px;
 }
-.myitems-maxitem__coverimage img{
+
+.myitems-maxitem__coverimage img {
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.577);
     max-width: 80%;
     min-width: 80%;
@@ -178,7 +174,7 @@ min-height: 150px;
     margin-top: 5px;
     margin-left: 10%;
     font-family: 'PTSans-Regular';
-    font-size: 12px; 
+    font-size: 12px;
 }
 
 .myitems-maxitem__country {
@@ -189,11 +185,11 @@ min-height: 150px;
     color: var(--clr__grey6D);
 }
 
-.myitems-maxitem__support{
+.myitems-maxitem__support {
     color: var(--clr__grey6D);
 }
 
-.myitems-maxitem__price{
+.myitems-maxitem__price {
     margin-top: 15px;
     margin-left: 10%;
     font-family: 'PTSans-Regular';
@@ -217,12 +213,14 @@ min-height: 150px;
     display: flex;
     justify-content: flex-start;
 }
+
 .input-notes {
     border-radius: 5px;
     border: solid 1px black;
     padding: 5px;
     width: 95%;
 }
+
 .top-informations,
 .bot-informations {
     display: flex;
@@ -231,49 +229,41 @@ min-height: 150px;
     width: 100vw;
     height: fit-content;
     background-color: aliceblue;
-    /* padding: 5px; */
+
 }
+
 .bot-informations {
     padding: 0px;
 }
-.collection-basicinfos__subcontainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
-
-.select__bar {
-    display: flex;
-    width: 22px;
-    background-color:rgb(220, 220, 245);
-}
-
-.collection-basicinfos__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 50%;
-    padding: 5px;
-}
 
 .arrow img {
     width: 35px;
     height: 25px;
 }
 
-.collection-items__coverimage:hover {
+.collection-items__coverimage:hover,
+.view2-items__coverimage:hover,
+.view3-items__coverimage:hover {
     cursor: pointer;
 }
 
-.collection-items__coverimage img{
-    box-shadow: 5px 5px 5px var(--clr__grey6D);
-    width: 140px;
-    height: auto;
-    min-height: 140px;
+.collection-items__coverimage,
+.view2-items__coverimage,
+.view3-items__coverimage {
+
+
+    &>img {
+        box-shadow: 5px 5px 5px var(--clr__grey6D);
+        width: 140px;
+        height: auto;
+        min-height: 140px;
+    }
 }
 
-.collection-items__coverimage {
+.collection-items__coverimage,
+.view2-items__coverimage,
+.view3-items__coverimage {
     display: flex;
     justify-content: center;
     overflow: hidden;
@@ -282,18 +272,34 @@ min-height: 150px;
     text-align: center;
 }
 
-
-.collection-items__title {
-    font-size: 12px;
-    margin-top: 0px;
-}
 .collection-items__subtitle,
 .collection-items__editor,
 .collection-items__year,
 .collection-items__plateform {
+    padding: 2px;
+    margin-right: 5%;
     font-size: 12px;
     font-family: 'PTSans-Italic';
-    
+}
+
+.view2-items__subtitle,
+.view2-items__editor,
+.view2-items__year,
+.view2-items__plateform {
+    padding: 2px;
+    margin-right: 5%;
+    font-size: 12px;
+    font-family: 'PTSans-Italic';
+}
+
+.view3-items__subtitle,
+.view3-items__editor,
+.view3-items__year,
+.view3-items__plateform {
+    padding: 2px;
+    margin-right: 5%;
+    font-size: 12px;
+    font-family: 'PTSans-Italic';
 }
 
 /*
@@ -301,12 +307,13 @@ min-height: 150px;
 First Part of CSS collection view 2
 -----------------------------------
 */
-.collection-view-2 {
+.collection-view-2,
+.collection-view-3 {
     position: relative;
-    margin-top:45px
+    margin-top: 45px
 }
 
-.myitems-maxitem__price{
+.myitems-maxitem__price {
     margin-top: 15px;
     margin-left: 10%;
     font-family: 'PTSans-Regular';
@@ -315,7 +322,9 @@ First Part of CSS collection view 2
     color: var(--clr__grey6D);
 }
 
-.collection-item__maincontainer {
+.collection-item__maincontainer,
+.view2-item__maincontainer,
+.view3-item__maincontainer {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -325,9 +334,12 @@ First Part of CSS collection view 2
     border-bottom: 1px solid $black;
 
 
-  
+
 }
-.collection-basicinfos__subcontainer {
+
+.collection-basicinfos__subcontainer,
+.view2-basicinfos__subcontainer,
+.view3-basicinfos__subcontainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -344,7 +356,9 @@ First Part of CSS collection view 2
 
 
 
-.collection-statesinfos__subcontainer {
+.collection-statesinfos__subcontainer,
+.view2-statesinfos__subcontainer,
+.view3-statesinfos__subcontainer {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -353,11 +367,20 @@ First Part of CSS collection view 2
 
     .collection-items__prices,
     .collection-items__date,
-    .collection-items__state {
+    .collection-items__state,
+    .view2-items__prices,
+    .view2-items__date,
+    .view2-items__state,
+    .view3-items__prices,
+    .view3-items__date,
+    .view3-items__state {
         margin-bottom: 4px;
+
         span {
             font-weight: 600;
-        };
+        }
+
+        ;
 
     }
 }
@@ -374,10 +397,12 @@ First Part of CSS collection view 2
     display: flex;
     justify-content: center;
     width: 80px;
-    background-color:$black;
+    background-color: $black;
 }
 
-.collection-basicinfos__container {
+.collection-basicinfos__container,
+.view2-basicinfos__container,
+.view3-basicinfos__container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -388,38 +413,41 @@ First Part of CSS collection view 2
 
 
 
-.collection-arrow {
+.collection-arrow,
+.view2-arrow,
+.view3-arrow {
     position: absolute;
     right: 0px;
 }
 
-.collection-items__title {
+.collection-items__title,
+.view2-items__title,
+.view3-items__title {
     border-radius: 5px;
     word-break: break-word;
+    font-size: 12px;
     margin: 0 6px;
     background-color: $whiteFF;
+    text-align: left;
+    font-family: 'PTSans-Bold';
 
     h3 {
         margin-top: auto;
         margin-bottom: auto;
-        padding: 5px;;
+        padding: 5px;
+        ;
     }
 
 }
 
-.collection-items__subtitle,
-.collection-items__editor,
-.collection-items__year,
-.collection-items__plateform {
-    padding: 2px;
-    margin-right: 5%;
-}
+
 
 .bot-items__subcontainer {
     margin-left: 85px;
 }
+
 .bot-items__prices h4 {
-   padding: 5px;
+    padding: 5px;
 }
 
 .bot-items__prices h4 span {
@@ -433,16 +461,16 @@ First Part of CSS collection view 2
 }
 
 .bot-items__date-state p {
-   margin: 5px;
-   font-size: 12px;
-   font-family: 'PTSans-Italic';
+    margin: 5px;
+    font-size: 12px;
+    font-family: 'PTSans-Italic';
 }
 
 .bot-items__date-state h5 {
-   margin: 5px;
-   font-size: 12px;
-   font-family: 'PTSans-Bold';
-   
+    margin: 5px;
+    font-size: 12px;
+    font-family: 'PTSans-Bold';
+
 }
 
 .bot-items__notes {
@@ -457,4 +485,3 @@ First Part of CSS collection view 2
 .form-notes {
     text-align: center;
 }
-
